# py-etp-client

./: .env.sample  .flake8  .gitignore  README.md  pyproject.toml
.github/workflow/: ci-publish-pypi-test.yml
.github/workflows/: ci-publish-pypi-test.yml  ci-publish-pypi.yml  ci-tests.yml
configs/: all_server_configs_sample.json  sample.yaml
example/: .env.sample  pyproject.toml
example/py_etp_client_example/: main.py  ui.py
py_etp_client/: __init__.py  auth.py  etpclient.py  etpconfig.py  etpscript.py  etpsimpleclient.py  main.py  requests.py  serverprotocols.py  utils.py
tests/: test_listener_paradigm.py  test_requests.py  test_utils_uri.py
