[project]
dynamic = ["version"]
name = "py-etp-client"

description = "A python client to interact with the ETP server in with a websocket connection"
authors = [
    {name = "Valentin Gauthier", email = "valentin.gauthier@geosiris.com"}
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.9,<4.0"

[tool.poetry]
version = "0.0.0"

[tool.poetry.dependencies]
etptypes = "=1.0.4"
etpproto = "^1.0.6"
websocket-client="^1.0.0"
energyml-resqml2-2="^1.12.0"
energyml-resqml2-0-1="^1.12.0"
energyml-witsml2-0="^1.12.0"
energyml-witsml2-1="^1.12.0"
energyml-prodml2-2="^1.12.0"
energyml-utils="^1.8.3"
dotenv = "^0.9.9"
pyyaml = "^6.0.2"
numpy = "^1.26.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
flake8 = "^7.1.2"
black = "^25.1.0"
pytest-cov = "^6.0.0"
poetry-dynamic-versioning = "^1.8.1"
jinja2 = "^3.1.6"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
line-length = 119
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[tool.poetry.scripts]
client = "py_etp_client.main:main"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
format-jinja = """
    {%- if distance == 0 -%}
        {%- if base is defined and base %}
            {{ serialize_pep440(base, stage, revision) }}
        {%- else %}
            {{ serialize_pep440(base, stage, revision) }}
        {%- endif %}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1) }}
    {%- else %}
        {{ serialize_pep440(bump_version(base), stage, revision) }}  # Similarly, avoid using local version here
    {%- endif %}
"""
